<resources>
    <string name="app_name">NewAppKotlin_1</string>
    <string name="tv_result">Результат:</string>
    <string name="tv_count_hint">Количество</string>
    <string name="button_convert">Конвертировать</string>
    <string name="tv_from">Из какой</string>
    <string name="tv_to">В какую</string>
    <string name="string_clear_all">Отчистить всё</string>
    <string-array name="currency_spinner">
        <item>RUB</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>GBP</item>
        <item>AMD</item>
        <item>BYN</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>DKK</item>
        <item>USD</item>
        <item>EUR</item>
        <item>INR</item>
        <item>KZT</item>
        <item>CAD</item>
        <item>KGS</item>
        <item>CNY</item>
        <item>MDL</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>RON</item>
        <item>XDR</item>
        <item>SGD</item>
        <item>TJS</item>
        <item>TRY</item>
        <item>TMT</item>
        <item>UZS</item>
        <item>UAH</item>
        <item>CZK</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>ZAR</item>
        <item>KRW</item>
        <item>JPY</item>
    </string-array>
</resources>